	Fixed so it's possible to edit images and links inside tables using the context menu.
	Fixed so table dialogs and the advanced image dialog doesn't loose selection in IE if the dialogs where navigated/submitted with the keyboard.
	Fixed so the theme_advanced_blockformats options can have named items for example title 1=h1;title 2=h2.
	Fixed so the inlinepopups default start zIndex is 300000.
	Fixed typo in media plugin Shockware is now replaced with Shockwave.
	Fixed psuedo memory leak in IE with the replaceChild method inside the DOMUtils.replace method.
	Fixed so memory is released in IE when an editor instance is removed from page.
Version 3.0.5 (2008-03-12)
	Added new black skin variant to the o2k7 skin contributed by Stefan Moonen.
	Added new explode method to the tinymce core class. This does a split but removed whitespace it also defaults to a , delimiter.
	Added new detection logic for IE 8 standards mode into the DOMUtils class strMode can now be checked to see if that mode is on/off.
	Added new noscale option value for the scale select box for Flash in the media plugin.
	Fixed bug where the menu for the ColorSplitButton wasn't removed when the editor was removed.
	Fixed bug where font colors couldn't be edited correctly since the style of the element didn't get updated correctly.
	Fixed bug where class of elements would get lost when TinyMCE was fixing incorrect HTML markup.
	Fixed bug where table editing would produce double height values.
	Fixed bug where width style value wouldn't be removed if you switched width unit from cm/em to pixels or percent.
	Fixed bug where the search/replace input box wasn't auto focused like the other dialogs.
	Fixed bug where the old mceAddControl command would use the fullscreen settings next time it created an instance.
	Fixed bug where multiple lines where added to the target cell if you merged multiple empty cells.
	Fixed bug where drop down menus would be incorrectly positioned inside scrollable divs.